# voxel_game

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/core/: system.h
core/include/core/graphics/: camera.h  graphical_context.h  vertex_array.h  voxel.h  window.h
core/include/core/graphics/shader/: shader.h  shader_program.h
core/include/core/math/: frustum_culling.h  matrix.h  noise.h  vector.h
core/include/core/physics/: movement.h
core/include/core/utils/: file.h  string.h
core/include/core/utils/containers/: octree.h  queue_static.h
core/include/core/world/: chunk.h  world.h
core/shaders/: voxel_fragment.glsl  voxel_geometry.glsl  voxel_vertex.glsl
core/src/: system.c
core/src/graphics/: camera.c  graphical_context.c  vertex_array.c  voxel.c  window.c
core/src/graphics/shader/: shader.c  shader_program.c
core/src/math/: frustum_culling.c  matrix.c  noise.c  vector.c
core/src/physics/: movement.c
core/src/utils/: file.c  string.c
core/src/utils/containers/: octree.c  queue_static.c
core/src/world/: chunk.c  world.c
game/: CMakeLists.txt
game/include/application/: application.h  application_events.h  binder.h
game/src/: main.c
game/src/application/: application.c  binder.c
game/src/ui/: main.c
project/: CMakeLists.txt
project/include/graphics/: camera.h  graphical_context.h  vertex_array.h  voxel.h  window.h
project/include/graphics/shader/: shader.h  shader_program.h
project/include/math/: frustum_culling.h  matrix.h  noise.h  vector.h
project/include/utils/: file.h
project/include/utils/containers/: octree.h  queue_static.h
project/include/world/: chunk.h  world.h
project/shaders/: voxel_fragment.glsl  voxel_vertex.glsl
project/src/: main.c
project/src/graphics/: camera.c  graphical_context.c  vertex_array.c  voxel.c  window.c
project/src/graphics/shader/: shader.c  shader_program.c
project/src/math/: frustum_culling.c  matrix.c  noise.c  vector.c
project/src/utils/: file.c
project/src/utils/containers/: octree.c  queue_static.c
project/src/world/: chunk.c  world.c
